-- Add ability to create a plain dm-crypt volume at the end of a regular file(steganography).
-- Various fixes and improvements.

version 5.6.0
-- Add ability to create volume keys using YubiKey's challenge-response feature.
-- Add GUI options to clear dead mount points(these are unused mount folders located
   at /run/media/private/$USER). CLI users should call CLI components with "--clear-dead-mount-points"
-- Fix a race condition bug introduced in version 5.5.0 that prevented volumes from getting mounted
  under certain circumstances.

version 5.7.0
-- Fix a bug introduced in 5.6.0 that prevents unlocking PLAIN dm-crypt volume that use non default
   crypto options because the selection button in is zuluCrypt-gui always disabled.
-- Update French translations.
-- Dont resolve loop device paths to their backing file if they are partitioned.
-- Fix a bug that prevented restoring a LUKS2 volume header.
-- Identify authenticated luks2 volumes as luks2+.
-- Add support for creating authenticated luks2 volumes(the support in Currently in zuluCrypt-cli only).
-- Default to using 512bit keys when creating LUKS volumes.

version 5.7.1
-- Use cryptsetup instead of zuluplay to unlock TrueCrypt volumes if installed
   version of cryptsetup >= 1.6.0(released on January 14,2013).
-- Use cryptsetup instead of zuluplay to unlock VeraCrypt volumes if installed
   version of cryptsetup >= 1.6.7(released on March 23, 2015).
-- The two changes above will hopefully solve long standing problems around
    unlocking TrueCrypt/VeraCrypt volumes that use preboot authentication.
-- Use cryptsetup by default instead of dislocker to unlock BitLocker volumes
   if installed version of cryptsetup >= 2.3.0(released on February 3,2020).
   Users of cryptsetup >= 2.3.0 who prefer to use dislocker to unlock
   BitLocker volumes  should create a text file at "/etc/zuluCrypt/dislocker".

version 5.7.2
-- Add ability to show used LUKS key slots and their properties in zuluCrypt-gui.