@@ -325,3 +325,5 @@ version 5.7.1
 
 version 5.7.2
 -- Add ability to show used LUKS key slots and their properties in zuluCrypt-gui.
+-- Fix a bug that caused zuluCrypt to not set user specified digest hash when creating LUKS2 volumes.
+-- Default to creating LUKS2 volumes if installed version of cryptsetup supports it.
